# dbschema

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Readme.md  compose.yml  crypto_simple.hcl  dbschema.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
crates/pglite/: Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
crates/pglite/examples/: inspect.rs  print_imports.rs
crates/pglite/src/: lib.rs
crates/pglite/tests/: imports_drift.rs
docs/: .gitignore  Readme.md  configuration.md  create-migration.md  data-sources.md  fmt.md  linting.md  locals.md  modules.md  output.md  package.json  pnpm-lock.yaml  provider.md  scenarios.md  ssg-for-vite.tsx  tests.md  validate.md  variables.md  vite.config.ts  wasm.md
docs/postgres/: aggregate.md  collation.md  domain.md  enum.md  event_trigger.md  extension.md  foreign_data_wrapper.md  foreign_server.md  foreign_table.md  function.md  grant.md  index.md  materialized.md  operator.md  policy.md  procedure.md  publication.md  role.md  rule.md  schema.md  sequence.md  statistics.md  subscription.md  table.md  tablespace.md  text_search_configuration.md  text_search_dictionary.md  text_search_parser.md  text_search_template.md  trigger.md  type.md  view.md
docs/src/: app.tsx  index.html  main.tsx  routes.tsx
docs/src/docs/: enum.mdx  extension.mdx  function.mdx  getting-started.mdx  index.mdx  installation.mdx  locals.mdx  materialized.mdx  module.mdx  output.mdx  policy.mdx  schema.mdx  table.mdx  test.mdx  trigger.mdx  variable.mdx  view.mdx
examples/: bidding.hcl  count.hcl  domain.hcl  dynamic.hcl  enum.hcl  event_trigger.hcl  expression.hcl  extension.hcl  for_each.hcl  function.hcl  locals.hcl  main.hcl  materialized.hcl  module.hcl  object_variables.hcl  output.hcl  policy.hcl  schema.hcl  sequence.hcl  statistics.hcl  table.hcl  trigger.hcl  type.hcl  variable.hcl  variable_validation.hcl  view.hcl
examples/modules/timestamps/: main.hcl
src/: config.rs  eval.rs  lib.rs  main.rs  model.rs  parser.rs  sql.rs  validate.rs  wasm.rs
src/backends/: json.rs  mod.rs  postgres.rs  prisma.rs
src/eval/: builtins.rs  core.rs  for_each.rs  mod.rs  resource_impls.rs
src/eval/builtins/: base64.rs  collection.rs  conversion.rs  crypto.rs  datetime.rs  mod.rs  numeric.rs  string.rs  utility.rs
src/frontend/: core.rs  data_sources.rs  env.rs  for_each.rs  lower.rs  mod.rs  resource_impls.rs
src/frontend/ast/: mod.rs
src/frontend/builtins/: base64.rs  collection.rs  conversion.rs  crypto.rs  datetime.rs  mod.rs  numeric.rs  string.rs  utility.rs
src/ir/: config.rs  env.rs  mod.rs
src/lint/: column_type_mismatch.rs  destructive_change.rs  long_identifier.rs  missing_foreign_key_index.rs  mod.rs  sql_syntax.rs  unused_index.rs
src/passes/: validate.rs
src/postgres/: collation.rs  foreign_data_wrapper.rs  foreign_server.rs  foreign_table.rs  mod.rs  text_search.rs
src/prisma/: ast.rs  mod.rs  parser.rs  serializer.rs
src/provider/: mod.rs
src/provider/postgres/: backend.rs  mod.rs  test_backend.rs
src/provider/postgres/generator/: collation.rs  foreign_data_wrapper.rs  foreign_server.rs  foreign_table.rs  mod.rs  text_search.rs
src/scenario/: mod.rs
src/test_runner/: mod.rs  pglite.rs  postgres.rs
tests/: pglite_backend.rs
