[workspace]
members = [
    "crates/pglite"
]

[package]
name = "dbschema"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2.0.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hcl = { package = "hcl-rs", version = "0.19" }
regex = "1"
toml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
base64 = "0.22"
md5 = "0.8"
walkdir = "2"
path-absolutize = "3"
postgres = "0.19"
log = "0.4"
env_logger = "0.11"
url = "2"
postgres-protocol = { version = "0.6", optional = true }
bytes = { version = "1", optional = true }
fallible-iterator = { version = "0.2", optional = true }
pglite = { path = "crates/pglite", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
pglite = ["dep:pglite", "postgres-protocol", "bytes", "fallible-iterator"]

[profile.release]
opt-level = 3
