[package]
name = "dbschema"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Define database schema's as HCL files, and generate idempotent SQL migrations"
homepage = "https://github.com/TheKnarf/dbschema"
repository = "https://github.com/TheKnarf/dbschema"
keywords = ["HCL", "Postgres", "DB", "SQL"]
categories = ["command-line-utilities", "database", "development-tools"]
readme = "Readme.md"

[dependencies]
anyhow = "1"
thiserror = "2.0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hcl = { package = "hcl-rs", version = "0.19" }
regex = "1"
toml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
base64 = "0.22"
md5 = "0.8"
walkdir = "2"
path-absolutize = "3"
postgres = "0.19"
log = "0.4"
env_logger = "0.11"
url = "2"
postgres-protocol = { version = "0.6", optional = true }
bytes = { version = "1", optional = true }
fallible-iterator = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
pg_query = "6.1.1"
ariadne = "0.5"
chumsky = { version = "0.11", default-features = false, features = ["std"] }
internment = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []

[profile.release]
opt-level = 3
