[package]
name = "pglite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
fallible-iterator = "0.2"
postgres-protocol = "0.6"
wasmer = "5.0.0-rc.1"
wasmer-emscripten = "5.0.0-rc.1"
wasmer-wasix = { version = "0.29.0", default-features = false, features = ["sys-default"] }

[dev-dependencies]
wasmparser = "0.216"
